--- a/params2.ini
+++ b/params2.ini
@@ -1,8 +1,8 @@
 [INPUTS]
-gff = ProjetSimADN/Init_files/tousgenesidentiques.gff
-tss = ProjetSimADN/Init_files/TSS.dat
-tts = ProjetSimADN/Init_files/TTS.dat
-barr_fix = ProjetSimADN/Init_files/prot.dat
+gff = ProjetSimADN/tousgenesidentiques.gff
+tss = ProjetSimADN/TSS.dat
+tts = ProjetSimADN/TTS.dat
+barr_fix = ProjetSimADN/prot.dat
 
 [TOPOISOMERASES]
 GYRASE_CTE = 0.01
