MAJ code prof, RNAPS_NB = 6, semble fctionner okay

--- a/testRes/params2.ini
+++ b/testRes/params2.ini
@@ -1,8 +1,8 @@
 [INPUTS]
-gff = ProjetSimADN/tousgenesidentiques.gff
-tss = ProjetSimADN/TSS.dat
-tts = ProjetSimADN/TTS.dat
-barr_fix = ProjetSimADN/prot.dat
+gff = tousgenesidentiques.gff
+tss = TSS.dat
+tts = TTS.dat
+barr_fix = prot.dat
 
 [TOPOISOMERASES]
 GYRASE_CTE = 0.01
