--- a/params2.ini
+++ b/params2.ini
@@ -1,8 +1,8 @@
 [INPUTS]
-gff = ProjetSimADN/tousgenesidentiques.gff
-tss = ProjetSimADN/TSS.dat
-tts = ProjetSimADN/TTS.dat
-barr_fix = ProjetSimADN/prot.dat
+gff = tousgenesidentiques.gff
+tss = TSS.dat
+tts = TTS.dat
+barr_fix = prot.dat
 
 [TOPOISOMERASES]
 GYRASE_CTE = 0.01
@@ -24,7 +24,7 @@ DELTA_T = 2
 [SIMULATION]
 rnaps_genSC=0.2
 SIGMA_0 = -0.06
-RNAPS_NB = 10
+RNAPS_NB = 6
 OUTPUT_STEP = 100
 GYRASE_CONC = 0.3
 TOPO_CONC = 0.05
