--- a/testRes/paramsInit.ini
+++ b/testRes/paramsInit.ini
@@ -1,8 +1,8 @@
 [INPUTS]
-gff = tousgenesidentiques.gff
-tss = TSS.dat
-tts = TTS.dat
-barr_fix = prot.dat
+gff = Init_files/tousgenesidentiques.gff
+tss = Init_files/TSS.dat
+tts = Init_files/TTS.dat
+barr_fix = Init_files/prot.dat
 
 [TOPOISOMERASES]
 GYRASE_CTE = 0.01
